@@ -152,8 +152,8 @@
 		label = text('Exchange Rate') #'
 		type = 'text'
 		class = "numeric"
-		name = 'exchange_rate'
-		value = exchange_rate
+		name = 'exchangerate'
+		value = exchangerate
 		size = 20
 	}  ?>
 	</div>
