@@ -15,6 +15,7 @@ Changelog for 1.3.11
 * Removed unnecessary shebang lines in scripts/* files (Robert C)
 * Fixed GL recurring transaction not posting (Chris T)
 * Improved error handling when extensions/contrib scripts not found (Chris T)
+* Fixed multicurrency handling in bulk payment interface (Chris T and Erik H)
 
 Changelog for 1.3.10
 * Fixes for permissions for exchangerate table (Erik H)
